[package]
name = "strumur"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
os_info = "3.13.0"
rand = "0.9.2"
socket2 = { version = "0.6" }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
xml = "1.2"
xmltree = "0.12"

[dev-dependencies]
libc = "0.2"
x-diff-rs = "0.4.1"
